--- a/public/html/index.html
+++ b/public/html/index.html
@@ -50,7 +50,7 @@
 
     <div class="container">
 
-      <div class="gridster">
+      <div class="dashboard gridster">
         <ul>
           <!--<li class="widget" data-row="1" data-col="1" data-sizex="2" data-sizey="1"></li>
           <li class="widget" data-row="3" data-col="1" data-sizex="1" data-sizey="1"></li>
