--- a/public/html/index.html
+++ b/public/html/index.html
@@ -129,6 +129,8 @@
     <script src="/js/lib/jquery.md5.js"></script>
     <script src="/js/lib/jquery.debouncedresize.js"></script>
     <script src="/js/lib/async.js"></script>
+    <script src="/js/eventemitter.js"></script>
+    <script src="/js/dashutils.js"></script>
     <script src="/js/app.js"></script>
   </body>
 </html>
