--- a/public/html/index.html
+++ b/public/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
   <head>
     <title>DashBuild</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,6 @@
     <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/css/jquery.gridster.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
-
-    <script src="/js/lib/modernizr.min.js"></script>
-    <script src="/js/lib/angular.min.js"></script>
 
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/img/apple-touch-icon-144-precomposed.png">
@@ -19,34 +16,6 @@
     <link rel="shortcut icon" href="/img/favicon.png">
   </head>
   <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="brand" href="#">DashBuild</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="dropdown" id="dashboard-menu">
-                <a href="#dashboard-menu" class="dropdown-toggle" data-toggle="dropdown">Dashboards</a>
-                <ul class="dropdown-menu" role="menu">
-                  <li>
-                    <a href="#"><i class="icon-plus"></i> New Dashboard</a>
-                  </li>
-                </ul>
-              </li>
-              <li>
-                <a href="#add-widget" data-toggle="modal"><i class="icon-plus"></i> Add Widget</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="container">
 
@@ -72,49 +41,6 @@
 
     </div>
 
-    <div id="add-widget" class="modal hide fade">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Add a Widget</h3>
-      </div>
-      <div class="modal-body">
-        <div class="row-fluid">
-          <div class="span6">
-            <select class="widget-list"></select>
-          </div>
-          <div id="widget-config" class="span6"></div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <a href="#" class="btn" data-dismiss="modal">Cancel</a>
-        <a href="#" class="btn btn-primary disabled" data-loading-text="Adding..." autocomplete="off">Add Widget</a>
-      </div>
-    </div>
-
-    <div id="choose-datasource" class="modal hide fade">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Select a Data Source</h3>
-      </div>
-      <div class="modal-body">
-        <form>
-          <fieldset>
-            <label>Data Source</label>
-            <select class="datasource-list"></select>
-            <!--<label>Account</label>
-            <select class="account-list"></select>
-            <span class="help-inline">
-              <button class="add-account" type="submit" class="btn">Add Account</button>
-            </span>-->
-          </fieldset>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <a href="#" class="btn" data-dismiss="modal">Cancel</a>
-        <a href="#" class="btn btn-primary disabled" data-loading-text="Adding..." autocomplete="off">Use Data Source</a>
-      </div>
-    </div>
-
     <noscript>
       <div class="front-no-js-warn">
         <h3>DashBuild requires JavaScript</h3>
@@ -122,12 +48,13 @@
       </div>
     </noscript>
 
-    <script src="/js/lib/jquery-1.10.1.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/lib/jquery-1.10.2.min.js"></script>
     <script src="/js/lib/bootstrap.min.js"></script>
     <script src="/js/lib/jquery.bigtext.js"></script>
     <script src="/js/lib/jquery.gridster.js"></script>
-    <script src="/js/lib/jquery.md5.js"></script>
     <script src="/js/lib/jquery.debouncedresize.js"></script>
+    <script src="/js/lib/jquery.animatenumbers.js"></script>
     <script src="/js/lib/async.js"></script>
     <script src="/js/eventemitter.js"></script>
     <script src="/js/dashutils.js"></script>
