Adding timeseries widget

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,6 +6,7 @@
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/css/jquery.gridster.min.css" rel="stylesheet">
+    <link href="/css/rickshaw.min.css" rel="stylesheet">
     <link href="/css/app.css" rel="stylesheet">
 
     <!-- Fav and touch icons -->
@@ -39,6 +40,8 @@
     <script src="/js/lib/jquery.bigtext.js"></script>
     <script src="/js/lib/jquery.gridster.js"></script>
     <script src="/js/lib/jquery.debouncedresize.js"></script>
+    <script src="/js/lib/d3.js"></script>
+    <script src="/js/lib/rickshaw.js"></script>
     <script src="/js/lib/async.js"></script>
     <script src="/js/eventemitter.js"></script>
     <script src="/js/dashutils.js"></script>
